# py-few-shots

./: .gitignore  README.md  docker-compose.yml  pyproject.toml  tox.ini
.github/workflows/: test.yml
src/best_shot/: __init__.py  async_client.py  client.py  constant.py  core.py  types.py
src/best_shot/embed/: base.py  litellm.py  store.py  transformers.py
src/best_shot/embedding_generator/: base.py  factory.py  transformer.py
src/best_shot/embedding_storage/: base.py  factory.py  memory.py
src/best_shot/store/: base.py  chroma.py  memory.py  qdrant.py  weaviate.py
src/best_shot/utils/: asyncify.py  asyncio.py  format.py  formatter.py
src/few_shots/: __init__.py  async_client.py  client.py  types.py
src/few_shots/embed/: base.py  fastembed.py  litellm.py  openai.py  transformers.py
src/few_shots/store/: base.py  chroma.py  memory.py  milvus.py  pg.py  qdrant.py  turbopuffer.py  weaviate.py
src/few_shots/utils/: datetime.py  format.py
tests/: conftest.py  test_async_client.py  test_client.py  test_types.py
tests/__snapshots__/: test_types.ambr
tests/store/: conftest.py  test_chroma.py  test_pg.py  test_qdrant.py  test_stores.py  test_weaviate.py
tests/utils/: formatter.py  test_asyncio.py  test_format.py  test_formatter.py
